繁中/簡中 three point 字體修正

--- a/index.html
+++ b/index.html
@@ -193,8 +193,7 @@
                             <hr class="section-heading-spacer">
                             <div class="clearfix"></div>
                             <h2 class="section-heading">RECORD YOUR SPENDING</h2>
-                            <p class="lead">
-                            Always forgetting about the best price?<br>Use Keeprice to record your every spending so that there’s no need for you to worry about.<span></p>
+                            <p class="lead">Always forgetting about the best price?<br>Use Keeprice to record your every spending so that there’s no need for you to worry about.<span></p>
                         </div>
                         <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                             <img class="img-responsive" src="img/recoed_consumption.png" alt="">
