--- a/zh-Hant/index.html
+++ b/zh-Hant/index.html
@@ -87,7 +87,6 @@
                                 </li>
                             </ul>
                         </li>
-
                         <!--<li class="">
                             <a class="page-scroll" href="#services">Services</a>
                         </li>
@@ -245,7 +244,7 @@
                 </span>
             </div>
             <div class="col-md-4" style="text-align: center; margin-top: 30px ">
-                <span style="font-family: 'Droid Serif','PingFang-TC','Helvetica Neue','Helvetica',' Arial','sans-serif'; font-size: 19px">隨時隨地計算商品單價，<br>與親友分享最新的價格資訊，<br>加入Keeprice，你可以放心盡情消費。</span>
+                <div class="three-points">隨時隨地計算商品單價，<br>與親友分享最新的價格資訊，<br>加入Keeprice，你可以放心盡情的消費。</div>
                 <!-- <button href="#contact" class="btn btn-xl">Send Message</button> -->
                 <br><br><a class="btn btn-primary btn-lg page-scroll" href="#contact">立即體驗</a>
             </div>
