--- a/zh-Hans/index.html
+++ b/zh-Hans/index.html
@@ -194,8 +194,7 @@
                             <hr class="section-heading-spacer">
                             <div class="clearfix"></div>
                             <h2 class="section-heading">记录消费</h2>
-                            <p class="lead">
-                            总是想不起以往买过的便宜价格？<br>Keeprice帮你记得每一笔消费，让你不再为此烦恼。<span></p>
+                            <p class="lead">总是想不起以往买过的便宜价格？<br>Keeprice帮你记得每一笔消费，让你不再为此烦恼。<span></p>
                         </div>
                         <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                             <img class="img-responsive" src="../img/recoed_consumption.png" alt="">
@@ -246,7 +245,7 @@
                 </span>
             </div>
             <div class="col-md-4" style="text-align: center; margin-top: 30px ">
-                <span style="font-family:'Droid Serif','PingFang-TC','Helvetica Neue','Helvetica',' Arial','sans-serif'; font-size: 19px">随时随地计算商品单价，<br>与亲友分享最新的价格资讯<br>加入Keeprice，你可以放心尽情消费。</span>
+                <div class="three-points">随时随地计算商品单价，<br>与亲友分享最新的价格资讯<br>加入Keeprice，你可以放心尽情的消费。</sdiv>
                 <!-- <button href="#contact" class="btn btn-xl">Send Message</button> -->
                 <br><br><a class="btn btn-primary btn-lg page-scroll" href="#contact">立即体验</a>
             </div>
