[added]: Promoting Apps with Smart App Banner ref: https://developer.apple.com/library/mac/documentation/AppleApplications/Reference/SafariWebContent/PromotingAppswithAppBanners/PromotingAppswithAppBanners.html

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <meta property=“og:language” content=”en”/>
     <meta property=“fb:admins” content=“Keeprice-app”/>
 
+    <meta name="apple-itunes-app" content="app-id=1078845708">
     <link rel="alternate" href="http://landing-page.keeprice-app.com/zh-Hant/" hreflang="zh-Hant" />
     <link rel="alternate" href="http://landing-page.keeprice-app.com/zh-Hans/" hreflang="zh-Hans" />
     <link rel="alternate" href="http://landing-page.keeprice-app.com/" hreflang="x-default" />
