--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <meta property=“fb:admins” content=“Keeprice-app”/>
 
     <meta name="apple-itunes-app" content="app-id=1078845708">
+
     <link rel="alternate" href="http://landing-page.keeprice-app.com/zh-Hant/" hreflang="zh-Hant" />
     <link rel="alternate" href="http://landing-page.keeprice-app.com/zh-Hans/" hreflang="zh-Hans" />
     <link rel="alternate" href="http://landing-page.keeprice-app.com/" hreflang="x-default" />
@@ -300,52 +301,21 @@
     <section id="contact">
         <div class="content-contact">
             <div class="container">
-                <div class="row">
-                    <div class="col-lg-12 text-center">
 
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="row register-form">
-                            <div class="col-md-4">
+                <div class="row ">
+                    <div class="col-lg-6 col-md-6 col-xs-0 vcenter">
+                        <img class="img-responsive keeprice-logo" src="img/keeprice_logo.png" alt="">
+                            </div><!--(DO NOT REMOVE THIS)
+                        --><div class="col-lg-6 col-md-6 col-xs-12 vcenter">
 
-                                <img class="img-responsive keeprice-logo" src="img/keeprice_logo.png" alt="">
-                            </div>
-
-                            <div class="col-md-8">
-                                <div id="mc_embed_signup">
-                                    <form action="//iiwa-design.us13.list-manage.com/subscribe/post?u=6dfcd558b0dd158652f74d42e&amp;id=28b5cf335c" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-                                        <div id="mc_embed_signup_scroll">
-                                            <h3 class="section-heading"><span style="font-size:20px">Welcome to Keeprice !<br> Please leave your name and email. We will notify you when released.</span></h3>
-                                            <div class="form-group">
-                                                <input type="email" value="" name="EMAIL" class="form-control" id="mce-EMAIL" placeholder="Email Address" data-validation-required-message="Please enter your Email.">
-                                                <p class="help-block text-danger"></p>
-                                            </div>
-                                            <div class="form-group">
-                                                <input type="text" value="" name="FNAME" class="form-control" id="mce-FNAME" placeholder="First Name" data-validation-required-message="Please enter your Frist Name.">
-                                                <p class="help-block text-danger"></p>
-                                            </div>
-                                            <div class="form-group">
-                                                <input type="text" value="" name="LNAME" class="form-control" id="mce-LNAME" placeholder="Last Name" data-validation-required-message="Please enter your Last Name.">
-                                                <p class="help-block text-danger"></p>
-                                            </div>
-                                            <div id="mce-responses" class="clear">
-                                                <div class="response" id="mce-error-response" style="display:none"></div>
-                                                <div class="response" id="mce-success-response" style="display:none"></div>
-                                            </div>
-                                        </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                                        <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_6dfcd558b0dd158652f74d42e_28b5cf335c" tabindex="-1" value=""></div>
-                                        <div class="clearfix"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn-xl btn-xl-full"></div>
-                                        <p class="section-footing">We will not spam you.</p>
-
-                                    </form>
-                                </div>
-                            </div>
+                        <div class="section-download">
+                        <h3 class="section-heading"><span style="font-size:20px">Welcome to Keeprice !<br> Download Now on the App Store!</span></h3>
+                        <!-- replace with download link -->
+                        <a href="https://itunes.apple.com/tw/app/keeprice-guan-jia-ge/id1078845708" target="_blank" data-track="iOS Badge" class="app-store-link"> <img class="download_btn" alt="取得 Keeprice iOS 版" src="img/Download_on_the_App_Store_Badge_US-UK_135x40.svg"> </a>
                         </div>
-
                     </div>
                 </div>
+
             </div>
         </div>
     </section>
