[modified]:adjust font color of download section sync between languages

--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                         --><div class="col-lg-6 col-md-6 col-xs-12 vcenter">
 
                         <div class="section-download">
-                        <h3 class="section-heading"><span style="font-size:20px">Welcome to Keeprice !<br> Download Now on the App Store!</span></h3>
+                        <h3 class="section-heading"><span class="download-msg">Welcome to Keeprice !<br> Download Now on the App Store!</span></h3>
                         <!-- replace with download link -->
                         <a href="https://itunes.apple.com/tw/app/keeprice-guan-jia-ge/id1078845708" target="_blank" data-track="iOS Badge" class="app-store-link"> <img class="download_btn" alt="取得 Keeprice iOS 版" src="img/Download_on_the_App_Store_Badge_US-UK_135x40.svg"> </a>
                         </div>
